Bump SDK version and target Java 21
Update maven.compiler.source/target to 21 in both examples and sdk-cloud-dfe modules and bump sdk-cloud-dfe version to 1.0.6. Replace new URL(url) with URI.create(url).toURL() in Service to improve URI-to-URL conversion/encoding when building connections. No other behavior changes intended.